@@ -3,6 +3,7 @@ package com.culturefinder.songdodongnae.delicious_spot.domain;
 import com.culturefinder.songdodongnae.admin.delicious_spot.dto.AdminDeliciousSpotCreateRequestDto;
 import com.culturefinder.songdodongnae.creator.domain.Creator;
 import com.culturefinder.songdodongnae.curation.CurationThumbnailResDto;
+import com.culturefinder.songdodongnae.delicious_spot.dto.DeliciousSpotResponseDto;
 import com.culturefinder.songdodongnae.series.domain.SeriesDeliciousSpot;
 import jakarta.persistence.*;
 import lombok.*;
@@ -60,13 +61,13 @@ public class DeliciousSpot {
 
     private LocalDateTime createdTime;
 
+    private String imageUrl;
+
     @OneToMany(mappedBy = "deliciousSpot", cascade = CascadeType.ALL)
     private List<DeliciousSpotImage> deliciousSpotImages = new ArrayList<>();
 
     @OneToMany(mappedBy = "deliciousSpot", cascade = CascadeType.ALL)
     private List<SeriesDeliciousSpot> seriesDeliciousSpotList = new ArrayList<>();
-
-    private String imageUrl;
 
     public DeliciousSpot(AdminDeliciousSpotCreateRequestDto deliciousSpot) {
         this.name = deliciousSpot.getName();
@@ -86,12 +87,36 @@ public class DeliciousSpot {
         this.likes = deliciousSpot.getLikes();
     }
 
+    public DeliciousSpotResponseDto fromEntity() {
+        return DeliciousSpotResponseDto.builder()
+                .id(this.id)
+                .creator(this.creator)
+                .name(this.name)
+                .location(this.location)
+                .price(this.price)
+                .naverRating(this.naverRating)
+                .kakaoRating(this.kakaoRating)
+                .startTime(this.startTime)
+                .endTime(this.endTime)
+                .waiting(this.waiting)
+                .parking(this.parking)
+                .suggestionMenu(this.suggestionMenu)
+                .description(this.description)
+                .onelineDescription(this.onelineDescription)
+                .contact(this.contact)
+                .instagram(this.instagram)
+                .likes(this.likes)
+                .createdTime(this.createdTime)
+                .deliciousSpotImages(this.deliciousSpotImages)
+                .build();
+    }
+
     public CurationThumbnailResDto fromThumbEntity() {
         return CurationThumbnailResDto.builder()
                 .id(this.id)
                 .title(this.name)
                 .introduction(this.onelineDescription)
-                .imageUrl(this.deliciousSpotImages.get(0).getImageUrl())
+                .imageUrl(this.deliciousSpotImages.getFirst().getImageUrl())
                 .build();
     }
 
